# tail-risk-hedging-optimizer

./: .gitignore  README.md  config.py  main.py  pyproject.toml
dashboard/: app.py
dashboard/static/: app.js  index.html  style.css
src/: backtester.py  calibrator.py  data_loader.py  entry_timing.py  factors.py  ml_models.py  optimizer.py  options.py  portfolio.py  predictions.py  scenarios.py  simulation.py
